--- a/Assignment 1/public/index.css
+++ b/Assignment 1/public/index.css
@@ -43,6 +43,22 @@ a {
     text-decoration: none;
 }
 
+#filter {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-items: center;
+    background-color: black;
+    height: 70px;
+    padding-top: 10px;
+}
+
+select {
+    height: 50px;
+    width: 100px;
+    justify-content: center;
+    font-size: 15px;
+}
+
 @media only screen and (max-width: 700px) {
     main {
         display: flex;
